working on article section -did a little base layout for the article

--- a/index.html
+++ b/index.html
@@ -34,19 +34,21 @@
 
       <!--On the sidebar there are 3 section one for logo one for navigation and last one for settings-->
       <div class="side">
-        <section class="logo">DASHBOARD</section>
+        <section class="logo">
+          <i class="fa-solid fa-dice"></i><span class="">DASHBOARD</span>
+        </section>
         <section class="home">
-          <span><i class="fa-solid fa-house icon"></i> Home </span>
-          <span><i class="fa-solid fa-user icon"></i>Profile</span>
-          <span><i class="fa-solid fa-message icon"></i>Messages</span>
-          <span><i class="fa-regular fa-clock icon"></i>History</span>
-          <span><i class="fa-solid fa-list-check icon"></i>Tasks</span>
-          <span><i class="fa-solid fa-user-group icon"></i>Communities</span>
+          <i class="fa-solid fa-house icon"></i><span>Home </span>
+          <i class="fa-solid fa-user icon"></i><span>Profile</span>
+          <i class="fa-solid fa-message icon"></i><span>Messages</span>
+          <i class="fa-regular fa-clock icon"></i><span>History</span>
+          <i class="fa-solid fa-list-check icon"></i><span>Tasks</span>
+          <i class="fa-solid fa-user-group icon"></i><span>Communities</span>
         </section>
         <section class="settings">
-          <span><i class="fa-solid fa-gear icon"></i>Settings</span>
-          <span><i class="fa-solid fa-user-group icon"></i>Support</span>
-          <span><i class="fa-solid fa-user-group icon"></i>Privacy</span>
+          <i class="fa-solid fa-gear icon"></i> <span>Settings</span>
+          <i class="fa-solid fa-user-group icon"></i><span>Support</span>
+          <i class="fa-solid fa-user-group icon"></i><span>Privacy</span>
         </section>
       </div>
 
@@ -65,8 +67,75 @@
 
       <!--On the article there are two section on the left for posts and on the right for announcement and trending-->
       <div class="article">
-        <section class="posts"></section>
-        <section class="announcement"></section>
+        <div>
+          <span>Your Projects </span>
+          <section class="posts">
+            <div class="">
+              <h3>SUPER COOL PROJECT</h3>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled it to make a type specimen book
+              </p>
+            </div>
+            <div class="">
+              <h3>LESS COOL PROJECT</h3>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled it to make a type specimen book
+              </p>
+            </div>
+            <div class="">
+              <h3>IMPOSSIBLE PROJECT</h3>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled it to make a type specimen book
+              </p>
+            </div>
+            <div class="">
+              <h3>EASY PROJECT</h3>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled it to make a type specimen book
+              </p>
+            </div>
+            <div class="">
+              <h3>HATE PROJECT</h3>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled it to make a type specimen book
+              </p>
+            </div>
+            <div class="">
+              <h3>LOVE PROJECT</h3>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled it to make a type specimen book
+              </p>
+            </div>
+          </section>
+        </div>
+        <div>
+          <div>
+            <span>ANNOUNCEMENT</span>
+            <div></div>
+          </div>
+          <div>
+            <span>TRENDING</span>
+            <div></div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
