everything working good but havent imported good fonts and havent used different images aswell

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <!--On the article there are two section on the left for posts and on the right for announcement and trending-->
       <div class="article">
         <div>
-          <span>Your Projects </span>
+          <span>YOUR PROJECTS </span>
           <section class="posts">
             <div class="">
               <h3>SUPER COOL PROJECT</h3>
@@ -78,6 +78,11 @@
                 text ever since the 1500s, when an unknown printer took a galley
                 of type and scrambled it to make a type specimen book
               </p>
+              <section class="watch">
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-solid fa-eye"></i>
+                <i class="fa-solid fa-share"></i>
+              </section>
             </div>
             <div class="">
               <h3>LESS COOL PROJECT</h3>
@@ -87,6 +92,11 @@
                 text ever since the 1500s, when an unknown printer took a galley
                 of type and scrambled it to make a type specimen book
               </p>
+              <section class="watch">
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-solid fa-eye"></i>
+                <i class="fa-solid fa-share"></i>
+              </section>
             </div>
             <div class="">
               <h3>IMPOSSIBLE PROJECT</h3>
@@ -96,6 +106,11 @@
                 text ever since the 1500s, when an unknown printer took a galley
                 of type and scrambled it to make a type specimen book
               </p>
+              <section class="watch">
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-solid fa-eye"></i>
+                <i class="fa-solid fa-share"></i>
+              </section>
             </div>
             <div class="">
               <h3>EASY PROJECT</h3>
@@ -105,6 +120,11 @@
                 text ever since the 1500s, when an unknown printer took a galley
                 of type and scrambled it to make a type specimen book
               </p>
+              <section class="watch">
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-solid fa-eye"></i>
+                <i class="fa-solid fa-share"></i>
+              </section>
             </div>
             <div class="">
               <h3>HATE PROJECT</h3>
@@ -114,6 +134,11 @@
                 text ever since the 1500s, when an unknown printer took a galley
                 of type and scrambled it to make a type specimen book
               </p>
+              <section class="watch">
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-solid fa-eye"></i>
+                <i class="fa-solid fa-share"></i>
+              </section>
             </div>
             <div class="">
               <h3>LOVE PROJECT</h3>
@@ -123,17 +148,67 @@
                 text ever since the 1500s, when an unknown printer took a galley
                 of type and scrambled it to make a type specimen book
               </p>
+              <section class="watch">
+                <i class="fa-regular fa-star"></i>
+                <i class="fa-solid fa-eye"></i>
+                <i class="fa-solid fa-share"></i>
+              </section>
             </div>
           </section>
         </div>
-        <div>
+        <div class="aside">
           <div>
-            <span>ANNOUNCEMENT</span>
-            <div></div>
+            <span class="spann">ANNOUNCEMENT</span>
+            <section class="content">
+              <section>
+                <h5>SITE MAINTAINANCE</h5>
+                <p>
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry.
+                </p>
+              </section>
+              <section style="display: flex; justify-content: center">
+                <div class="line" style="width: 100%"></div>
+              </section>
+              <section>
+                <h5>SITE MAINTAINANCE</h5>
+                <p>
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry.
+                </p>
+              </section>
+              <section style="display: flex; justify-content: center">
+                <div class="line" style="width: 100%"></div>
+              </section>
+              <section>
+                <h5>SITE MAINTAINANCE</h5>
+                <p>
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry.
+                </p>
+              </section>
+            </section>
           </div>
           <div>
-            <span>TRENDING</span>
-            <div></div>
+            <span class="spann">TRENDING</span>
+            <section class="trending">
+              <section>
+                <img src="images.jpg" class="pfp1" height="50" width="50" />
+                <p><span>@zoro</span>Learning Good</p>
+              </section>
+              <section>
+                <img src="images.jpg" class="pfp1" height="50" width="50" />
+                <p><span>@zoro</span>Learning Bad</p>
+              </section>
+              <section>
+                <img src="images.jpg" class="pfp1" height="50" width="50" />
+                <p><span>@zoro</span>Bad Learning but good</p>
+              </section>
+              <section>
+                <img src="images.jpg" class="pfp1" height="50" width="50" />
+                <p><span>@zoro</span>Good learning but bad</p>
+              </section>
+            </section>
           </div>
         </div>
       </div>
